--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,13 @@
-<center>
-	<h1>Core Trainer</h1>
-	<h3><i>a Personal Trainer's tool to connect with, schedule, and train clients</i></h3>
-	<h6>~ COMING SOON ~</h6>
-</center>
+<div class="hero">
+  <div class="frosty">
+    <br />
+    <div class="frosty col-10 offset-1 text-center">
+      <br />
+    	<h1>Core Trainer</h1>
+      <br />
+    	<h3><i>a Personal Trainer's tool to connect with, schedule, and train clients</i></h3>
+      <br />
+    	<h6>~ COMING SOON ~</h6>
+    </center>
+  </div>
+</div>
