adds devise 'yield' views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
   <% if alert.present? %>
     <p class="alert alert-danger"><%= alert %></p>
   <% end %>
+
+  <!-- Render View -->
+  <%= yield %>
 </body>
 
 
