adds mini-magick gem and styles index.html

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,13 +1,40 @@
-<div class="hero">
+<div class="hero card-img">
   <div class="frosty">
     <br />
+    <div class="row feature text-center">
     <div class="frosty col-10 offset-1 text-center">
       <br />
     	<h1>Core Trainer</h1>
       <br />
     	<h3><i>a Personal Trainer's tool to connect with, schedule, and train clients</i></h3>
       <br />
+      <%= link_to 'Trainer sign-in', '#', class: 'btn btn-success' %> <%= link_to 'Client sign-in', '#', class: 'btn btn-success' %>
+      <br />
+      <br />
     	<h6>~ COMING SOON ~</h6>
+      <br />
     </center>
+  </div>
+</div>
+<br />
+<div class="row feature text-center">
+
+
+  <div class="col-12 col-sm">
+    <h3>Profile Page</h3>
+    <br />
+    <p>Lists personal trainer clients.</p>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Calendar</h3>
+    <br />
+    <p>ADD DESCRIPTION HERE.</p>
+  </div>
+  
+  <div class="col-12 col-sm">
+    <h3>Profile Page</h3>
+    <br />
+    <p>Lists biometrics of client.</p>
   </div>
 </div>
