--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -57,3 +57,31 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
 }
+
+.card-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.btn {
+  border-radius: 0;
+}
+.btn-success {
+  color: white;
+  background-color: #666666;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 300;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.feature {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+body {
+  background: image_url('bg.png');
+  font-family: "Helvetica Neue", Helvetica;
+}
