--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -82,6 +82,6 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 body {
-  background: image_url('bg.png');
   font-family: "Helvetica Neue", Helvetica;
+  background: image_url('/assets/dark_wood.png');
 }
