update forms and views to reflect other repo

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,40 +1,36 @@
-<div class="hero card-img">
-  <div class="frosty">
+<!-- Large Feature Box -->
+<div class="hero">
+  <br />
+  <div class="frosty col-10 offset-1 text-center">
     <br />
-    <div class="row feature text-center">
-    <div class="frosty col-10 offset-1 text-center">
-      <br />
-    	<h1>Core Trainer</h1>
-      <br />
-    	<h3><i>a Personal Trainer's tool to connect with, schedule, and train clients</i></h3>
-      <br />
-      <%= link_to 'Trainer sign-in', '#', class: 'btn btn-success' %> <%= link_to 'Client sign-in', '#', class: 'btn btn-success' %>
-      <br />
-      <br />
-    	<h6>~ COMING SOON ~</h6>
-      <br />
-    </center>
+    <h1>Core Trainer</h1>
+    <br />
+    <h2>a Personal for Trainers and Clients to connect</h2>
+    <br />
+    <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
+    <br /><br />
   </div>
 </div>
 <br />
+
+<!-- 3 Feature Box -->
 <div class="row feature text-center">
-
-
+  <!-- Left Box -->
   <div class="col-12 col-sm">
-    <h3>Profile Page</h3>
+    <h3>Amazing Workouts</h3>
     <br />
-    <p>Lists personal trainer clients.</p>
+    <p>Choose from a number of workout offered by local trainers</p>
   </div>
-
+  <!-- Center Box -->
   <div class="col-12 col-sm">
-    <h3>Calendar</h3>
+    <h3>Move At Your Own Pace</h3>
     <br />
-    <p>ADD DESCRIPTION HERE.</p>
+    <p>Access an archive of lessons or step one-on-one lessons</p>
   </div>
-  
+  <!-- Right Box -->
   <div class="col-12 col-sm">
-    <h3>Profile Page</h3>
+    <h3>Join our Community</h3>
     <br />
-    <p>Lists biometrics of client.</p>
+    <p>Learn from a community of like-minded individuals</p>
   </div>
 </div>
