--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -3,13 +3,19 @@
 .navbar {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
+  letter-spacing: 4px;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: image_url('/assets/dark_wood.png');
+  background: grey;
 }
 
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
-  font-weight: 100;
+  font-weight: 200;
+  color: white;
+}
+
+navbar-brand {
+  font-weight: 800;
   color: white;
 }
 
@@ -83,5 +89,5 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 body {
   font-family: "Helvetica Neue", Helvetica;
-  background: image_url('/assets/dark_wood.png');
+  background: grey;
 }
