--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,38 +10,92 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Core Trainer</a>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
+      <!-- Navigation Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+            <li class="nav-item">
+              <%= link_to 'See All Trainers', "#", class: 'nav-link' %>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to 'My Dashboard', "#", class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Sign up!', new_user_registration_path, class: 'nav-link' %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
 
-  <% if notice.present? %>
-    <p class="alert alert-info"><%= notice %></p>
-  <% end %>
-  <% if alert.present? %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
+    <!-- Alerts for Devise -->
+    <% if notice.present? %>
+      <p class="alert alert-info"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
 
-  <!-- Render View -->
-  <%= yield %>
-</body>
+    <!-- Render View -->
+    <%= yield %>
 
-
-
+        <!-- Flexbox Footer-->
+    <div id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-3 text-center">
+            <b>Clients</b>
+            <br>
+            <%= link_to 'Dashboard', "#" %>
+            <br>
+            <%= link_to 'Book Session', "#" %>
+            <br>
+            <%= link_to 'Privacy Policy', "#" %>
+          </div>
+          <div class="col-12 col-sm-3 text-center">
+            <b>Trainers</b>
+            <br>
+            <%= link_to 'Dashboard', "#" %>
+            <br>
+            <%= link_to 'Update Schedule', '#' %>
+            <br>
+            <%= link_to 'Privacy Policy', '#' %>
+          </div>
+          <div class="col-12 col-sm-3 text-center">
+            <b>Resources</b>
+            <br>
+            <a href="https://google.com">Google</a>
+            <br>
+            <a href="https://codeschool.com">Code School</a>
+            <br>
+            <a href="https://khanacademy.com">Khan Academy</a>
+          </div>
+          <div class="col-12 col-sm-3 text-center">
+            <b>Developers</b>
+            <br>
+            <%= link_to 'Meet the Team', "https://github.com/CTfive" %>
+            <br>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src='https://vjs.zencdn.net/7.6.0/video.js'></script>
+  </body>
 </html>
