--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Coretrainer</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
+  <head>
+    <title>Coretrainer</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
 
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
-
-<body>
-
-      <!-- Navigation Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-inverse bg-inverse">
+      <!-- Toggler Button -->
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
-        </button>
-        <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+      </button>
+      <!-- Brand -->
+      <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
+      <!-- Navbar Links -->
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav text-right">
+          <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'See All Trainers', "#", class: 'nav-link' %>
+              <%= link_to 'My Dashboard', "#", class: 'nav-link' %>
             </li>
-          </ul>
-          <ul class="navbar-nav">
-            <% if user_signed_in? %>
-              <li class="nav-item">
-                <%= link_to 'My Dashboard', "#", class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-              </li>
-            <% else %>
-              <li class="nav-item">
-                <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Sign up!', new_user_registration_path, class: 'nav-link' %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </nav>
-    </div>
+            <li class="nav-item">
+              <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign up!', new_user_registration_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
 
     <!-- Alerts for Devise -->
     <% if notice.present? %>
@@ -56,7 +50,8 @@
     <!-- Render View -->
     <%= yield %>
 
-        <!-- Flexbox Footer-->
+    <!-- Flexbox Footer-->
+    <br><br>
     <div id="footer">
       <div class="container">
         <div class="row">
@@ -67,7 +62,6 @@
             <br>
             <%= link_to 'Book Session', "#" %>
             <br>
-            <%= link_to 'Privacy Policy', "#" %>
           </div>
           <div class="col-12 col-sm-3 text-center">
             <b>Trainers</b>
@@ -75,8 +69,6 @@
             <%= link_to 'Dashboard', "#" %>
             <br>
             <%= link_to 'Update Schedule', '#' %>
-            <br>
-            <%= link_to 'Privacy Policy', '#' %>
           </div>
           <div class="col-12 col-sm-3 text-center">
             <b>Resources</b>
@@ -85,12 +77,13 @@
             <br>
             <a href="https://codeschool.com">Code School</a>
             <br>
-            <a href="https://khanacademy.com">Khan Academy</a>
           </div>
           <div class="col-12 col-sm-3 text-center">
-            <b>Developers</b>
+            <b>Developer Credits</b>
             <br>
             <%= link_to 'Meet the Team', "https://github.com/CTfive" %>
+            <br>
+            <a href="https://github.com/CTfive/coretrainer">View Repository</a>
             <br>
           </div>
         </div>
