--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,8 +60,8 @@
         <div class="row">
           <div class="col-12 col-sm-3 text-center">
             <b>Clients</b>
-            <br>
-            <%= link_to 'Dashboard', "#" %>
+            <br>        
+            <%= link_to 'My Dashboard', dashboard_path, class: 'footer-link' %>
             <br>
             <%= link_to 'Book Session', "#" %>
             <br>
@@ -69,7 +69,7 @@
           <div class="col-12 col-sm-3 text-center">
             <b>Trainers</b>
             <br>
-            <%= link_to 'Dashboard', "#" %>
+            <%= link_to 'My Dashboard', dashboard_path, class: 'footer-link' %>
             <br>
             <%= link_to 'Update Schedule', '#' %>
           </div>
