totally rebulids database

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
     <br />
     <h1>Core Trainer</h1>
     <br />
-    <h2>a Personal for Trainers and Clients to connect</h2>
+    <h2>a tool for Personal Trainers and Clients to connect</h2>
     <br />
     <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
     <br /><br />
