--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,7 +11,13 @@
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
       <% end %>
-
+      <%= f.input :name,
+                  disabled: true, 
+                  hint: 'You cannot change your name.'%>
+      <%= f.input :username,
+                  required: false,
+                  autofocus: true,
+                  input_html: { autocomplete: "name" }%>
       <%= f.input :password,
                   hint: "leave it blank if you don't want to change it",
                   required: false,
