fixes 'signout' and 'my dashboard' links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <!-- Body-->
   <body>
+    
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-inverse bg-inverse">
       <!-- Toggler Button -->
@@ -22,7 +24,7 @@
         <ul class="navbar-nav text-right">
           <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'My Dashboard', "#", class: 'nav-link' %>
+              <%= link_to 'My Dashboard', dashboard_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
@@ -59,29 +61,6 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-3 text-center">
-            <b>Clients</b>
-            <br>        
-            <%= link_to 'My Dashboard', dashboard_path, class: 'footer-link' %>
-            <br>
-            <%= link_to 'Book Session', "#" %>
-            <br>
-          </div>
-          <div class="col-12 col-sm-3 text-center">
-            <b>Trainers</b>
-            <br>
-            <%= link_to 'My Dashboard', dashboard_path, class: 'footer-link' %>
-            <br>
-            <%= link_to 'Update Schedule', '#' %>
-          </div>
-          <div class="col-12 col-sm-3 text-center">
-            <b>Resources</b>
-            <br>
-            <a href="https://google.com">Google</a>
-            <br>
-            <a href="https://codeschool.com">Code School</a>
-            <br>
-          </div>
-          <div class="col-12 col-sm-3 text-center">
             <b>Developer Credits</b>
             <br>
             <%= link_to 'Meet the Team', "https://github.com/CTfive" %>
@@ -92,6 +71,7 @@
         </div>
       </div>
     </div>
-    <script src='https://vjs.zencdn.net/7.6.0/video.js'></script>
+  
+  <!-- End of Body -->
   </body>
 </html>
