--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,36 +1,38 @@
-<!-- Large Feature Box -->
-<div class="hero">
+<div class="container">
+  <!-- Large Feature Box -->
+  <div class="hero">
+    <br />
+    <div class="frosty col-10 offset-1 text-center">
+      <br />
+      <h1>Core Trainer</h1>
+      <br />
+      <h2>a tool for Personal Trainers and Clients to connect</h2>
+      <br />
+      <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
+      <br /><br />
+    </div>
+  </div>
   <br />
-  <div class="frosty col-10 offset-1 text-center">
-    <br />
-    <h1>Core Trainer</h1>
-    <br />
-    <h2>a tool for Personal Trainers and Clients to connect</h2>
-    <br />
-    <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
-    <br /><br />
-  </div>
-</div>
-<br />
 
-<!-- 3 Feature Box -->
-<div class="row feature text-center">
-  <!-- Left Box -->
-  <div class="col-12 col-sm">
-    <h3>Amazing Workouts</h3>
-    <br />
-    <p>Choose from a number of workout offered by local trainers</p>
-  </div>
-  <!-- Center Box -->
-  <div class="col-12 col-sm">
-    <h3>Move At Your Own Pace</h3>
-    <br />
-    <p>Access an archive of lessons or step one-on-one lessons</p>
-  </div>
-  <!-- Right Box -->
-  <div class="col-12 col-sm">
-    <h3>Join our Community</h3>
-    <br />
-    <p>Learn from a community of like-minded individuals</p>
+  <!-- 3 Feature Box -->
+  <div class="row feature align-center text-center">
+    <!-- Left Box -->
+    <div class="col-12 col-sm">
+      <h3>Record Workouts</h3>
+      <br />
+      <p>Add, Edit, Remove and, Schedule workouts from your dashboard!</p>
+    </div>
+    <!-- Center Box -->
+    <div class="col-12 col-sm">
+      <h3>Connect with a Trainer</h3>
+      <br />
+      <p>Access an archive of local trainers and book an appointment today!</p>
+    </div>
+    <!-- Right Box -->
+    <div class="col-12 col-sm">
+      <h3>Measure Progress</h3>
+      <br />
+      <p>Keep track of your goals with dashboard and schedule views!</p>
+    </div>
   </div>
 </div>
