--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 .navbar {
   font-family: "Helvetica Neue", Helvetica;
@@ -11,11 +12,6 @@
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
-  color: white;
-}
-
-navbar-brand {
-  font-weight: 800;
   color: white;
 }
 
@@ -85,9 +81,24 @@ h1, h2, h3, h4, h5, h6, .navbar {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-top: 0%;
+  margin-bottom: 5%;
+  border: solid white 2px;
+  border-radius: 6%;
+  color: #165e82;
 }
 
 body {
   font-family: "Helvetica Neue", Helvetica;
-  background: grey;
+  background: image_url('dark_wood.png');
+}
+
+footer {
+  border-top: solid black 1px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #292b2c;
+  color: white
 }
