--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <!-- Large Feature Box -->
   <div class="hero">
@@ -6,8 +7,9 @@
       <br />
       <h1>Core Trainer</h1>
       <br />
-      <h2>a tool for Personal Trainers and Clients to connect</h2>
+      <h2>A tool for Personal Trainers and Clients to connect</h2>
       <br />
+      <div class="btn">
       <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
       <br /><br />
     </div>
@@ -15,10 +17,13 @@
   <br />
 
   <!-- 3 Feature Box -->
+  <div class="feature">
+    <br />
   <div class="row feature align-center text-center">
     <!-- Left Box -->
     <div class="col-12 col-sm">
       <h3>Record Workouts</h3>
+      <br />
       <br />
       <p>Add, Edit, Remove and, Schedule workouts from your dashboard!</p>
     </div>
@@ -32,7 +37,8 @@
     <div class="col-12 col-sm">
       <h3>Measure Progress</h3>
       <br />
-      <p>Keep track of your goals with dashboard and schedule views!</p>
+      <br />
+      <p>Keep track of your goals with your dashboard and schedule views!</p>
     </div>
   </div>
 </div>
