--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,9 +14,9 @@
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "email" }%>
-      <%= f.input :role, 
+       <%# <%= f.input :role, 
                   as: :check_boxes, 
-                  collection: ['trainer'] %>
+                  collection: ['trainer'] %> 
       <%= f.input :username,
                   required: true,
                   autofocus: true,
