--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <br />
 <div class="booyah-box col-6 offset-3">
   <h2>Sign up</h2>
-
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
@@ -14,9 +13,10 @@
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "email" }%>
-       <%# <%= f.input :role, 
-                  as: :check_boxes, 
-                  collection: ['trainer'] %> 
+         <% Role.all.each do |role| %>
+          <%= f.checkbox :input_roles, {multiple: true}, role.trainer, role.client, nil %>
+          <%= role.trainer %>
+        <% end %>
       <%= f.input :username,
                   required: true,
                   autofocus: true,
