Front-end polishing q exit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,6 @@
             <li class="nav-item">
               <%= link_to 'Sign up!', new_user_registration_path, class: 'nav-link' %>
             </li>
-            <li class="nav-item">
-            <%= link_to 'My Dashboard', dashboard_path, class: 'nav-link' %>
-            </li>
           <% end %>
         </ul>
       </div>
@@ -57,7 +54,7 @@
     <%= yield %>
     
     <!-- Footer -->
-    <footer class="footer text-center font-small cyan darken-3">
+    <footer class="footer text-center">
       <!-- Credits -->
       <div class="https://github.com/CTfive/coretrainer">Made with ❤ by
         <a href="https://github.com/CTfive"> CTFive</a>
