--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -66,6 +66,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
   max-height: 100%;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .btn {
   border-radius: 0;
 }
@@ -79,15 +84,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .feature {
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  margin-top: 0%;
-  margin-bottom: 5%;
-  border-radius: 6%;
   color: #317da3;
+  margin: 0 5% 5% 0;
+  padding: 5%;
+  border: solid white 2px;
+  text-align: bottom;
 }
 
 h1{
@@ -118,22 +119,24 @@ body {
   background: image_url('dark_wood.png');
 }
 
- .feature {
-   margin: 0 5% 5% 0;
-   padding: 5%;
- }
 
- .form-actions {
+.form-actions {
   text-align: center;
   border-top: solid darkorange 2px;
   padding-top: 6%;
  }
 
- .form-inputs {
+.form-inputs {
   margin: 1%;
   padding: 1%;
  }
 
- .checkbox {
+.checkbox {
   text-align: center;
+ }
+
+ footer {
+  margin: 1%;
+  padding: 1%;
+  color: white;
  }
