--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,25 +1,24 @@
 
 <div class="container">
-  <!-- Large Feature Box -->
-  <div class="hero">
-    <br />
-    <div class="frosty col-10 offset-1 text-center">
+    <!-- Large Feature Box -->
+    <div class="hero">
       <br />
-      <h1>Core Trainer</h1>
-      <br />
-      <h2>A tool for Personal Trainers and Clients to connect</h2>
-      <br />
-      <div class="btn">
-      <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
-      <br /><br />
+      <div class="frosty col-10 offset-1 text-center">
+        <br />
+        <h1>Core Trainer</h1>
+        <br />
+        <h2>A tool for Personal Trainers and Clients to connect</h2>
+        <br />
+        <div class="btn">
+        <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
+        <br /><br />
+      </div>
     </div>
+    <br />
   </div>
-  <br />
 
   <!-- 3 Feature Box -->
-  <div class="feature">
-    <br />
-  <div class="row feature align-center text-center">
+  <div class="row feature text-center">
     <!-- Left Box -->
     <div class="col-12 col-sm">
       <h3>Record Workouts</h3>
@@ -42,3 +41,8 @@
     </div>
   </div>
 </div>
+
+<img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
+<img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+<img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
+<br>
