--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -135,8 +135,16 @@ body {
   text-align: center;
  }
 
+.form-check {
+  text-align: center;
+}
+
  footer {
   margin: 1%;
   padding: 1%;
   color: white;
+ }
+
+ .devise-links {
+  text-align: right;
  }
