--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Clients</h1>
+<div class="booyah-box col-10 offset-1">
+  <h1>Client Dashboard</h1>
+</div>
 
 <table>
   <thead>
