--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -19,5 +19,5 @@
 	  </div>
 	<% end %>
 
-	<%= render "devise/shared/links" %>
+	 <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
