--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -26,5 +26,5 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+   <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
