--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,5 +17,5 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+   <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
