--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,5 +36,5 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+   <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
