--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -18,5 +18,5 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+   <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
