--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<div class="booyah-box col-10 offset-1">
-  <h1>Client Dashboard</h1>
+<div class="booyah-box col-10 offset-1 text-center">
+  <h1>Clients</h1>
+  <strong><h3> what do y'all think?</h3></strong>
+  <br>
+  <p>We can use this as the client dashboard! <br> Make a < div > below to show off your skills! - MD</p>
 </div>
 
 <table>
@@ -23,5 +26,8 @@
 </table>
 
 <br>
-
 <%= link_to 'New Client', new_client_path %>
+<br>
+
+
+<h3 style="text-align:center; color:purple;">Implement your client dashboard ideas below this line by working in the views/clients/index.html.erb file and found at http://localhost:3030/clients</h3>
