--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New Client</h1>
 
-<%= render 'form', client: @client %>
+
+
+<%= render 'form', user: @user %>
 
 <%= link_to 'Back', clients_path %>
