--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Trainers</h1>
+<div class="booyah-box col-10 offset-1 text-center">
+  <h1>Clients</h1>
+  <strong><h3> what do y'all think?</h3></strong>
+  <br>
+  <p>We can use this as the client dashboard! <br> Make a < div > below to show off your skills!- MD</p>
+</div>
 
 <table>
   <thead>
@@ -21,5 +26,8 @@
 </table>
 
 <br>
-
 <%= link_to 'New Trainer', new_trainer_path %>
+<br>
+
+
+<h3 style="text-align:center; color:purple;">Implement your trainer dashboard ideas below this line by working in the views/trainers/index.html.erb file</h3>
