forgot to update the trainer page to say trainers

--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <div class="booyah-box col-10 offset-1 text-center">
-  <h1>Clients</h1>
+  <h1>Trainers</h1>
   <strong><h3> what do y'all think?</h3></strong>
   <br>
-  <p>We can use this as the client dashboard! <br> Make a < div > below to show off your skills!- MD</p>
+  <p>We can use this as the trainer dashboard! <br> Make a < div > below to show off your skills!- MD</p>
 </div>
 
 <table>
