--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,15 +1,17 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Abel|Montserrat|Raleway&display=swap');
 
 .navbar {
-  font-family: "Helvetica Neue", Helvetica;
-  font-weight: 200;
+  font-family: 'Abel', sans-serif;
+  font-weight: 400;
+  letter-spacing: 4px;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: image_url('/assets/dark_wood.png');
+  background: grey;
 }
 
 .navbar-inverse a.navbar-brand {
-  font-family: "Helvetica Neue", Helvetica;
-  font-weight: 100;
+  font-family: 'Abel', sans-serif;
+  font-weight: 250;
   color: white;
 }
 
@@ -33,13 +35,13 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .frosty h1 {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Abel', sans-serif;
   font-weight: 100;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
 
 .frosty h2 {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Abel', sans-serif;
   font-weight: 200;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
@@ -53,12 +55,18 @@ h1, h2, h3, h4, h5, h6, .navbar {
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   background: #f4f3f3;
-  border: 1ps solid #ccc;
+  border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  border-radius: 3px;
   padding: 10px;
 }
 
 .card-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+img {
   max-width: 100%;
   max-height: 100%;
 }
@@ -68,7 +76,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 .btn-success {
   color: white;
-  background-color: #666666;
+  background-color: #317da3;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 300;
@@ -76,12 +84,67 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .feature {
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
+  color: #317da3;
+  margin: 0 5% 5% 0;
+  padding: 5%;
+  border: solid white 2px;
+  text-align: bottom;
+}
+
+h1{
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+  font-weight: bold;
+  font-size: 78px;
+}
+
+h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 29px; 
+}
+
+p  {
+  font-family: 'Raleway', sans-serif;
+  font-size: 17px;
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica;
-  background: image_url('/assets/dark_wood.png');
+  font-family: 'Open Sans', sans-serif;
+  background: image_url('dark_wood.png');
 }
+
+
+.form-actions {
+  text-align: center;
+  border-top: solid darkorange 2px;
+  padding-top: 6%;
+ }
+
+.form-inputs {
+  margin: 1%;
+  padding: 1%;
+ }
+
+.checkbox {
+  text-align: center;
+ }
+
+.form-check {
+  text-align: center;
+}
+
+ footer {
+  margin: 1%;
+  padding: 1%;
+  color: white;
+ }
+
+ .devise-links {
+  text-align: right;
+ }
