Update dashboard page to role selection

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
         <h2>A tool for Personal Trainers and Clients to connect</h2>
         <br />
         <div class="btn">
-        <%= link_to 'Learn More', "#", class: 'btn btn-success' %>
+        <%= link_to 'Learn More', "#", class: 'btn btn-start' %>
         <br /><br />
       </div>
     </div>
