adds hover to learn more button

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -77,12 +77,16 @@ img {
 }
 
 .btn-start {
-  color: white;
+  color: grey;
   background-color: #317da3;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 400;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.btn-start:hover {
+  color: white
 }
 
 .feature {
