--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
         <h2>A tool for Personal Trainers and Clients to connect</h2>
         <br />
         <div class="btn">
-        <%= link_to 'Learn More', "#", class: 'btn btn-start' %>
+        <a href="#down" class="btn btn-start">Learn More</a>
         <br /><br />
       </div>
     </div>
@@ -48,3 +48,6 @@
   <img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
   <br>
 </div>
+<br>
+<div id="down" class="col-10 offset-1"><%= link_to "Sign up and choose your role today", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block'%></div>
+<br>
