--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,6 +24,12 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
+      <div class="checkbox booyah-box">
+        <%= f.association :roles,   as: :boolean, 
+                  label: "I'm a Trainer",
+                  hint: "Checking this box will register you as a Personal Trainer, at this time, it's irreversible."%>
+      </div>
+      <br>
     </div>
     <div class="form-actions">
       <%= f.button :submit, "Sign up" %>
@@ -32,4 +38,3 @@
 
    <div class="devise-links"><%= render "devise/shared/links" %></div>
 </div>
-<br>
