--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -126,9 +126,11 @@ body {
   margin-bottom: 60px;  /* Margin bottom by footer height */
 }
 
-html {  /* Imported with footer settings */
-  position: relative; 
+html { 
+  position: relative;  /* Imported with footer settings */
   min-height: 100%;
+
+  scroll-behavior: smooth;  /* Imported down button settings on home page titled 'learn more' */
 }
 
 .footer {
