--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -3,9 +3,13 @@
 	  <h1>Role</h1>
 	  <strong><h3>Select your account type</h3></strong>
 		<br>
-		<button type="button" class="btn btn-info btn-lg btn-block btn-outline-dark">Trainer</button>
-		<button type="button" class="btn btn-info btn-lg btn-block btn-outline-dark">Client</button>
+	<%= link_to "Trainer", "#", class: 'btn-lg btn btn-info button btn-block' %>
+	<%= link_to "Client", "#", class: 'btn-lg btn btn-info button btn-block' %>
 		<br>
 	</div>
+
+<br>
+<div class="col-10 offset-1">
 <img src="https://images.unsplash.com/photo-1434754205268-ad3b5f549b11?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2553&q=80">
+</div>
 <br>
