--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,39 +10,84 @@
         <h2>A tool for Personal Trainers and Clients to connect</h2>
         <br />
         <div class="btn">
-        <%= link_to 'Learn More', "#", class: 'btn btn-start' %>
+        <a class="btn btn-start" href="#down">Learn more</a>
         <br /><br />
       </div>
     </div>
     <br />
   </div>
 
-  <!-- 3 Feature Box -->
-  <div class="row feature text-center">
+    <!--First 3 Feature Box -->
+  <div class="row feature text-center col-12 offset-1">
     <!-- Left Box -->
     <div class="col-12 col-sm">
       <h3>Record Workouts</h3>
+    </div>
+    <!-- Center Box -->
+    <div class="col-12 col-sm">
+      <h3>Book Trainers</h3>
+    </div>
+    <!-- Right Box -->
+    <div class="col-12 col-sm">
+      <h3>Measure Progress</h3>
+    </div>
+  </div>
+
+
+  
+  <!-- First Images Display -->
+  <div class="image col-10 offset-1">
+    <br>
+    <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+    <br>
+    <img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
+    <img src="https://images.unsplash.com/photo-1549060279-7e168fcee0c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+    <img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
+    <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
+    <img src="https://images.unsplash.com/photo-1554284126-aa88f22d8b74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2657&q=80">
+    <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+  </div>
+
+  <!--Second 3 Feature Box -->
+  <div class="row feature text-center col-12 offset-1">
+    <!-- Left Box -->
+    <div class="col-12 col-sm">
+      <h3>Manage Workouts</h3>
       <br />
       <br />
-      <p>Add, Edit, Remove and, Schedule workouts from your dashboard!</p>
+      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur.</p>
     </div>
     <!-- Center Box -->
     <div class="col-12 col-sm">
       <h3>Connect with a Trainer</h3>
       <br />
-      <p>Access an archive of local trainers and book an appointment today!</p>
+      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur.</p>
     </div>
     <!-- Right Box -->
     <div class="col-12 col-sm">
-      <h3>Measure Progress</h3>
+      <h3>Schedule Sessions</h3>
       <br />
       <br />
-      <p>Keep track of your goals with your dashboard and schedule views!</p>
+      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur.</p>
     </div>
   </div>
-</div>
 
-<img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
-<img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-<img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
-<br>
+  
+  <!-- This button is linked to learn more button at top of page via id -->
+  <div id="down">
+  <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+  </div>
+  <br>
+</div>
