fixes and updates trainer forms

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,10 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <div class="booyah-box col-10 offset-1 text-center">
-  <h1>Clients</h1>
-  <strong><h3> what do y'all think?</h3></strong>
-  <br>
-  <p>We can use this as the client dashboard! <br> Make a < div > below to show off your skills! - MD</p>
+  <h1>Client Dashboard</h1>
+  <h3> views/clients/index.html.erb </h3>
 </div>
 
 <table>
@@ -72,3 +70,4 @@
     <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i>
   <% end %>  
 </div>
+<br>
