--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,10 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="booyah-box col-10 offset-1 text-center">
-  <h1>Trainers</h1>
-  <strong><h3> what do y'all think?</h3></strong>
-  <br>
-  <p>We can use this as the trainer dashboard! <br> Make a < div > below to show off your skills!- MD</p>
+  <h1>Trainers Dashboard</h1>
 </div>
 
 <table>
@@ -29,27 +26,19 @@
 <%= link_to 'New Trainer', new_trainer_path %>
 <br>
 
-
-<h3 style="text-align:center; color:purple;">Implement your trainer dashboard ideas below this line by working in the views/trainers/index.html.erb file</h3>
-<%= simple_form_for @Trainer, url: new_trainer_vertical_path do |f| %>
-  <%= f.error_notification %>
-
-  <%= f.input :name %>
-
-  <%= f.input :email, input_html: { autocomplete: 'email' } %>
-
-  <%= f.input :password, input_html: { autocomplete: 'current-password' } %>
-
-  <%= f.input :personal_athletic_background %>
-
-  <%= f.input :years_in_practice %>
-
-  <%= f.input :specialties %>
-
-  <%= f.input :favorite_exersize_modality %>
-
-  <%= f.input :ACE_certificate_number %>
-
-  <%= f.button :submit, class: "btn-primary" %>
-  <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
-<% end %>
+<!-- Trainer information form -->
+<div class="booyah-box col-10 offset-1 text-center">
+  <%= simple_form_for trainers_path(@trainer) do |f| %>
+    <%= f.error_notification %>
+    <%= f.input :bio %>
+    <%= f.input :location %>
+    <%= f.input :specialties %>
+    <%= f.input :started_training %>
+    <%= f.input :athletic_background %>
+    <%= f.input :certificate_id %>
+    <%= f.input :other_credentials %>
+    <%= f.button :submit, 'Add Trainer Info', class: "btn-primary" %>
+    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
+  <% end %>
+</div>
+<br>
