comment out create client in seeds.rb

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -2,5 +2,5 @@
 
 <%= link_to "Register as a Personal Trainer", "#", class: 'btn-lg btn btn-warning button btn-block' %>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
+<%= link_to 'Edit', edit_client_path(@client) %>
 <%= link_to 'Back', clients_path %>
