--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,11 +7,10 @@
         <br />
         <h1>Core Trainer</h1>
         <br />
-        <h2>A tool for Personal Trainers and Members to connect</h2>
+          <h2>A tool for Personal Trainers and Members to connect</h2>
         <br />
         <div class="btn">
-        <%= link_to 'Members', new_user_registration_path, class: 'btn btn-start' %><%= link_to 'Trainers', new_user_registration_path, class: 'btn btn-start' %>
-        <a class="btn btn-start" href="#down">Learn more</a>
+           <a class="btn btn-start" href="#down">Learn more</a>
         <br /><br />
       </div>
     </div>
@@ -36,66 +35,76 @@
 
 
   
-  <!-- First Images Display -->
-  <div class="image col-10 offset-1">
-    <br>
-    <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
-    <br>
-    <img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
-    <img src="https://images.unsplash.com/photo-1549060279-7e168fcee0c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
-    <img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
-    <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
-    <img src="https://images.unsplash.com/photo-1554284126-aa88f22d8b74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2657&q=80">
-    <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+ <!-- Signup Button -->
+<div class="image col-10 offset-1">
+  <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+  <br />
+  <br />
+</div>
+
+<!-- First Images Display -->
+<div class="Images Display">
+  <div class ="Group1">
+    <!-- 1st Picture Left -->
+    <div class="img1">
+      <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="pull-left mr-2">
+    </div>
+      <!-- 1st Description Right -->
+      <div class="text1">
+        <h3>Manage Workouts</h3>
+        <br />
+          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.</p>
+      </div> 
   </div>
 
-  <!--Second 3 Feature Box -->
-  <div class="row feature text-center col-12 offset-1">
-    <!-- Left Box -->
-    <div class="col-12 col-sm">
-      <h3>Manage Workouts</h3>
-      <br />
-      <br />
-      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur.</p>
+  <div class="Group2">
+    <!-- 2nd Picture Right -->
+    <div class="img2">
+      <img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" class="pull-right mr-2">
     </div>
-    <!-- Center Box -->
-    <div class="col-12 col-sm">
-      <h3>Connect with a Trainer</h3>
-      <br />
-      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur.</p>
+       <!-- 2nd Description Left -->
+      <div class="text2">
+        <h3>Connect with a Trainer</h3>
+        <br />
+          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+  </div>
+      
+  <div class="Group3">
+    <!-- 3rd Picture Left -->
+    <div class="img3">
+      <img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" class="pull-left mr-2">
     </div>
-    <!-- Right Box -->
-    <div class="col-12 col-sm">
-      <h3>Schedule Sessions</h3>
-      <br />
-      <br />
-      <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur.</p>
+      <!-- 3rd Description Right -->
+      <div class="text1">
+        <h3>Record Your Progress</h3>
+        <br />
+          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+        <br>
     </div>
   </div>
   
-<img class="img1" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-<div class="discription">
-<h3>Record Workouts</h3>
-<p>When your working out with a trainer, you will have the ability to record your reps and weights. You will be able to see the progress you are making</p>
-<img class="img2" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80">
 
-<img class="img3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80">
-<br>
   <!-- This button is linked to learn more button at top of page via id -->
   <div id="down">
-  <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+    <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-warning button' %>
   </div>
+  <br>
+
+    <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
+    <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
   <br>
 </div>
