fixes to get the app workin!

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
       <tr>
         <td><%= link_to 'Show', clients_path %></td>
-        <td><%= link_to 'Edit', edit_client_path(@client) %></td>
+        <td><%= link_to 'Edit', edit_client_path(@clients) %></td>
         <%# <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td> %>
       </tr>
   </tbody>
