--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -33,8 +33,6 @@
     </div>
   </div>
 
-<!-- This button is linked to learn more button at top of page via id -->
-  <div id="down">
   <div class= "text-center">
     <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-info' %>
   </div>
@@ -51,55 +49,57 @@
   <br>
   <br>
   <div class="block">
-      <div class="row">
-        <div class="span4">
-          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
-          <br>
-          <div class="content-heading"><h3>Manage Workouts</h3></div>
-          <br>
-          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-        </div>
-      </div>
-      <br/>
-      <br>
-      <div class="row">
-        <div class="span4">
-          <img class="img-right w-50 p-3" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"/>
-          <br>
-          <div class="content-heading"><h3>Connect with a Trainer</h3></div>
-          <br>
-          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-        </div>
-      </div>
-      <br>
-      <br>
-      <div class="row">
-        <div class="span4">
-          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"/>
-          <br>
-          <div class="content-heading"><h3>Record Your Progress</h3></div>
-          <br>
-          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-          <br>
-          <br>
-        </div>
+    <div class="row">
+      <div class="span4">
+        <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
+        <br>
+        <div class="content-heading"><h3>Manage Workouts</h3></div>
+        <br>
+        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
       </div>
     </div>
-
+    <br/>
+    <br>
+    <div class="row">
+      <div class="span4">
+        <img class="img-right w-50 p-3" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"/>
+        <br>
+        <div class="content-heading"><h3>Connect with a Trainer</h3></div>
+        <br>
+        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+      <div class="span4">
+        <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"/>
+        <br>
+        <div class="content-heading"><h3>Record Your Progress</h3></div>
+        <br>
+        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        <br>
+        <br>
+      </div>
+    </div>
   </div>
   
-<!-- Signup Button -->
-<br>
-<div class="image col-10 offset-1">
-  <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+  <!-- Signup Button -->
+  <!-- This button is linked to learn more button at top of page via id="down" DO NOT REMOVE -->
+  <br>
+  <div id="down">
+    <div class="col-10 offset-1">
+      <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
+    </div>
+  </div>
   <br />
   <br />
-</div>
 
   
-
+  <div class="image">
     <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
     <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+  </div>
   <br>
   <br>
 </div>
