--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -79,7 +79,7 @@ img {
 
 .btn-start {
   color: rgb(248, 245, 245);
-  background-color: #317da3;
+  background-color: #3b92bd;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 400;
@@ -103,7 +103,7 @@ h1{
   color: white;
   text-shadow: 2px 2px 4px #000000;
   font-weight: bold;
-  font-size: 78px;
+  font-size: 72px;
 }
 
 h2{
@@ -115,6 +115,23 @@ h3 {
   font-family: 'Montserrat', sans-serif;
   font-size: 29px; 
 }
+
+h4{
+  font-family: 'Montserrat', sans-serif;
+  color: rgb(33, 129, 240);
+  text-shadow: 2px 2px 4px #4e4c4c;
+  font-weight: bold;
+  font-size: 78px;
+}
+
+h5{
+  font-family: 'Montserrat', sans-serif;
+  color: rgb(26, 139, 45);
+  text-shadow: 2px 2px 4px #4e4c4c;
+  font-weight: bold;
+  font-size: 78px;
+}
+
 
 p  {
   font-family: 'Raleway', sans-serif;
