Tried fixing footer on homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <%= yield %>
     
     <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="fixed-bottom footer text-center">
       <!-- Credits -->
       <div class="https://github.com/CTfive/coretrainer">Made with ❤ by
         <a href="https://github.com/CTfive"> CTFive</a>
